missing words spotted by shamu++
git-svn-id: http://svn.pugscode.org/pugs@23817 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -854,8 +854,8 @@ exceptions and exit values:
        NEXT {...}       at loop continuation time, before any LEAVE
        LAST {...}       at loop termination time, after any LEAVE
 
-        PRE {...}       assert precondition at every block entry, before any
-       POST {...}       assert postcondition at every block exit, after any
+        PRE {...}       assert precondition at every block entry, before ENTER
+       POST {...}       assert postcondition at every block exit, after LEAVE
 
       CATCH {...}       catch exceptions, before LEAVE
     CONTROL {...}       catch control exceptions, before LEAVE
