--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 9 Mar 2006
+  Last Modified: 16 Apr 2007
   Number: 11
-  Version: 17
+  Version: 18
 
 =head1 Overview
 
@@ -201,6 +201,20 @@ Modules posted to CPAN or entered into any standard Perl 6 library
 are required to declare their full name so that installations can know
 where to keep them, such that multiple versions by different authors
 can coexist, all of them available to any installed version of Perl.
+
+The internal API for package names is always case-sensitive, even if
+the library system is hosted on a system that is not case-sensitive.
+This implies either some sort of name mangling capability or storage
+of intermediate products into a database of some sort.  In any event,
+the actual storage location must be encapsulated in the library system
+such that it is hidden from all language level naming constructs.
+(Provision must be made for interrogating the library system for
+the actual location of a module, of course, but this falls into
+the category of introspection.)  Note also that distributions
+need to be distributed in a way that they can be installed on
+case-insensitive systems without loss of information.  That's fine,
+but the language-level abstraction must not leak details of this
+mechanism without the user asking for the details to be leaked.
 
 The syntax of a versioned module or class declaration has multiple
 parts in which the non-identifier parts are specified in adverbial pair
