Note that unless no longer allows an else Clarification of binding semantics of if, elsif, and else Clarification of C<..>. requested by moritz++
git-svn-id: http://svn.pugscode.org/pugs@23828 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 19 Aug 2004
-  Last Modified: 28 Mar 2007
+  Last Modified: 17 Apr 2007
   Number: 4
-  Version: 56
+  Version: 57
 
 This document summarizes Apocalypse 4, which covers the block and
 statement syntax of Perl.
@@ -175,8 +175,8 @@ But these two are valid:
 
 =head1 Conditional statements
 
-The C<if> and C<unless> statements work almost exactly as they do in
-Perl 5, except that you may omit the parentheses on the conditional:
+The C<if> and C<unless> statements work much as they do in
+Perl 5.  However, you may omit the parentheses on the conditional:
 
     if $foo == 123 {
         ...
@@ -191,6 +191,24 @@ Perl 5, except that you may omit the parentheses on the conditional:
 If the final statement is a conditional which does not execute any
 branch, the return value is C<undef> in item context and C<()> in
 list context.
+
+The C<unless> statement does not allow an C<elsif> or C<else> in Perl 6.
+
+The value of the conditional expression may be optionally bound to
+a closure parameter:
+
+    if    testa() -> $a { say $a }
+    elsif testb() -> $b { say $b }
+    else          -> $b { say $b }
+
+Note that the value being evaluated for truth and subsequently bound is
+not necessarily a value of type Bool.  (All normal types in Perl may
+be evaluated for truth.  In fact, this construct would be relatively
+useless if you could bind only boolean values as parameters, since
+within the closure you already know whether it evaluated to true
+or false.)  Binding within an C<else> automatically binds the value
+tested by the previous C<if> or C<elsif>, which, while known to be
+false, might nevertheless be an I<interesting> value of false.
 
 Conditional statement modifiers work as in Perl 5.  So do the
 implicit conditionals implied by short-circuit operators.  Note though that
