Neglected to mention that unless also allows binding of its false parameter
git-svn-id: http://svn.pugscode.org/pugs@23829 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -208,7 +208,8 @@ useless if you could bind only boolean values as parameters, since
 within the closure you already know whether it evaluated to true
 or false.)  Binding within an C<else> automatically binds the value
 tested by the previous C<if> or C<elsif>, which, while known to be
-false, might nevertheless be an I<interesting> value of false.
+false, might nevertheless be an I<interesting> value of false.  (By similar
+reasoning, an C<unless> allows binding of a false parameter.)
 
 Conditional statement modifiers work as in Perl 5.  So do the
 implicit conditionals implied by short-circuit operators.  Note though that
